--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 DATABASE_URL=sqlite:///./database.db
 HOST=0.0.0.0
 PORT=8000
+
+SECRET_KEY=your_secret_key
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
